Bug 478978 - exporting iCalendar file does not follow configuration settings
Summary: exporting iCalendar file does not follow configuration settings
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-24 23:02 UTC by Jack
Modified: 2023-12-25 09:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jack 2023-12-24 23:02:48 UTC
When you export an iCalendar file, the file output does not change at all based on any of the configuration settings in the dialog (Settings/Configure KMyMoney, Plugins View, iCalendar item) for things like number of occurrences.
Comment 1 Thomas Baumgart 2023-12-25 09:56:38 UTC
Git commit 5461820811d114d190f515f9682efbff9b5b5aa9 by Thomas Baumgart.
Committed on 25/12/2023 at 10:56.
Pushed by tbaumgart into branch 'master'.

Fix generation of ics calendar file
FIXED-IN: 5.2

M  +24   -10   kmymoney/plugins/icalendar/export/icalendarexporter.cpp
M  +28   -14   kmymoney/plugins/icalendar/export/schedulestoicalendar.cpp
M  +2    -1    kmymoney/plugins/icalendar/export/schedulestoicalendar.h

https://invent.kde.org/office/kmymoney/-/commit/5461820811d114d190f515f9682efbff9b5b5aa9