Fix generation of ics calendar file

BUG: 478978
FIXED-IN: 5.2